better spacing in mobile version and some fixes

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ html {
 :root {
   --color-main: #9e3e26;
   --color-background: #feefe5;
-  --color-highlight: #f5bebe;
+  --color-highlight: #ebd4ce;
   --shadow: 5px 5px 0px rgba(0, 0, 0, 0.25);
   --font-smaller: 1.1rem;
   --font-small: 1.25rem;
@@ -34,6 +34,10 @@ body::-webkit-scrollbar-track {
 }
 body::-webkit-scrollbar-thumb {
   background: var(--color-background);
+}
+a {
+  color: var(--color-main);
+  text-underline-offset: 0.3rem;
 }
 .whatsapp {
   position: fixed;
@@ -65,7 +69,6 @@ body::-webkit-scrollbar-thumb {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 0;
   height: 5rem;
   background-color: var(--color-background);
   border-bottom: solid var(--color-main) 1px;
@@ -147,7 +150,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 3rem 0 20rem 0;
+  padding: 3rem 0;
   gap: 5rem;
   background-color: var(--color-main);
   color: var(--color-background);
@@ -231,9 +234,15 @@ button:hover {
   width: 40px;
   height: auto;
 }
-a {
+.waveBackground {
   display: flex;
-  text-decoration: none;
+  overflow-x: clip;
+  background-color: var(--color-main);
+}
+.wave {
+  opacity: 0.8;
+  width: 100%;
+  min-width: 60rem;
 }
 .footer {
   display: flex;
@@ -244,9 +253,10 @@ a {
   justify-content: space-evenly;
   align-items: center;
   color: var(--color-main);
-  background-color: var(--color-main);
+  background-color: var(--color-highlight);
   gap: 1rem;
   overflow-x: clip;
+  padding: 1rem 0;
 }
 .footer .brand {
   z-index: 1;
@@ -257,20 +267,19 @@ a {
   justify-content: space-between;
   align-items: center;
   width: 300px;
+  min-height: 10rem;
   font-size: var(--font-small);
   z-index: 1;
 }
 .social svg path {
   fill: var(--color-main);
 }
-.wave {
-  position: absolute;
-  bottom: 0;
-  opacity: 0.8;
-  width: 100%;
-  min-height: 30rem;
-  min-width: 50rem;
-  filter: hue-rotate(20deg);
+.mention {
+  display: flex;
+  gap: 0.5rem;
+  font-size: var(--font-small);
+  position: relative;
+  z-index: 1;
 }
 @media only screen and (max-width: 750px) {
   .whatsapp {
@@ -305,9 +314,14 @@ a {
   .heroArrows {
     display: none;
   }
-  .footerSocial {
+  .footer {
     flex-direction: column;
-    padding: 1rem 0;
+  }
+  .wave {
+    left: 0;
+  }
+  .mention {
+    flex-direction: column;
   }
 }
 @media only screen and (max-width: 500px) {
@@ -320,5 +334,9 @@ a {
   }
   .hero {
     height: 80svh;
+  }
+  .footerSocial {
+    flex-direction: column;
+    padding: 1rem 0;
   }
 }
